--- a/app/index.css
+++ b/app/index.css
@@ -6,8 +6,10 @@
     justify-content: center;
     border: 2px solid #8b76d6;
     border-radius: 10px;
+    cursor: pointer;
 }
 
+/* LINE */
 .collapsableNavConnectorLineClosed {
     width: 2px;
     height: 0px;
@@ -16,6 +18,7 @@
     justify-self: center;
 
     transition-property: all;
+    transition-delay: 1000ms;
     transition-duration: 1000ms;
     transition-timing-function: ease-in-out;
 }
@@ -32,35 +35,38 @@
     transition-timing-function: ease-in-out;
 }
 
+/* BORDER */
 .collapsableNavBorderClosed {
-    width: 10vw;
+    width: 13vw;
     height: 15vh;
     border: 2px solid black;
     display: grid;
     border-radius: 10px;
+    justify-self: center;
     /* border-image: linear-gradient(to bottom, #8b76d6 0%, black 100%); */
     
     transition-property: all;
-    transition-delay: 1000ms;
-    transition-duration: 5000ms;
+    transition-duration: 4000ms;
     transition-timing-function: ease-in-out;
 }
 
 .collapsableNavBorderClosed > p {
+    display: none;
     opacity: 0;
+    justify-self: center;
 
     transition-property: all;
     transition-delay: 6000ms;
-    transition-duration: 1000ms;
     transition-timing-function: ease-in-out;
 }
 
 .collapsableNavBorderOpen {
-    width: 10vw;
+    width: 13vw;
     height: 15vh;
     border: 2px solid #8b76d6;
     display: grid;
     border-radius: 10px;
+    justify-self: center;
     /* border-image: linear-gradient(to bottom, #8b76d6 100%, black 0%) 1; */
 
     transition-property: all;
@@ -70,10 +76,11 @@
 }
 
 .collapsableNavBorderOpen > p {
+    display: grid;
     opacity: 100;
+    justify-self: center;
 
     transition-property: all;
     transition-delay: 6000ms;
-    transition-duration: 1000ms;
     transition-timing-function: ease-in-out;
 }
